{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 237,
  "lineage": "bef16720-06e5-e3d7-c522-b11da48ebe0d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05f99644f370814d5",
            "domain": "vpc",
            "id": "eipalloc-00a9b0698bdb0bc2f",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-00745f4d482e6c8ea",
            "private_dns": "ip-10-0-0-192.ap-south-1.compute.internal",
            "private_ip": "10.0.0.192",
            "public_dns": "ec2-65-1-56-106.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.56.106",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.custom",
            "aws_route_table.ap-south-1a-public",
            "aws_route_table_association.ap-south-1a-public",
            "aws_subnet.ap-south-1a-public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4a70bd98c6d6441",
            "arn": "arn:aws:ec2:ap-south-1:237389711669:instance/i-0c2638542dd993c9f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2638542dd993c9f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0edd6dfcab753ab6e",
            "private_dns": "ip-10-0-1-149.ap-south-1.compute.internal",
            "private_ip": "10.0.1.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-061a40d681c376ec0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009f55ab1223568f1",
            "tags": {
              "Name": "mysql server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04422d64d70273c76"
            ]
          },
          "dependencies": [
            "aws_security_group.db",
            "aws_security_group.web",
            "aws_subnet.ap-south-1b-private",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b1ddd35fd71475a",
            "arn": "arn:aws:ec2:ap-south-1:237389711669:instance/i-0e908e3d71cf90f14",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e908e3d71cf90f14",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0033a31f4bc1ed336",
            "private_dns": "ip-10-0-0-25.ap-south-1.compute.internal",
            "private_ip": "10.0.0.25",
            "public_dns": "ec2-13-235-23-99.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.23.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0888398ad256911ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d3e2f52730d7186",
            "tags": {
              "Name": "Apache Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-017116e906a0b4804"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.ap-south-1a-public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237389711669:internet-gateway/igw-01ba9c2419d0bca55",
            "id": "igw-01ba9c2419d0bca55",
            "owner_id": "237389711669",
            "vpc_id": "vpc-0f5d9596a2ba9d8a0"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a9b0698bdb0bc2f",
            "id": "nat-09c70e2b2d052859b",
            "network_interface_id": "eni-00745f4d482e6c8ea",
            "private_ip": "10.0.0.192",
            "public_ip": "65.1.56.106",
            "subnet_id": "subnet-00d3e2f52730d7186",
            "tags": {
              "Name": "Nat-Gateway_Project"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.custom",
            "aws_route_table.ap-south-1a-public",
            "aws_route_table_association.ap-south-1a-public",
            "aws_subnet.ap-south-1a-public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f960bf3c8b8db8c2",
            "owner_id": "237389711669",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09c70e2b2d052859b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway"
            },
            "vpc_id": "vpc-0f5d9596a2ba9d8a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.custom",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.ap-south-1a-public",
            "aws_route_table_association.ap-south-1a-public",
            "aws_subnet.ap-south-1a-public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ap-south-1a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0db560cc2b01a2a08",
            "owner_id": "237389711669",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ba9c2419d0bca55",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0f5d9596a2ba9d8a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.custom",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021101f9f97418304",
            "route_table_id": "rtb-0f960bf3c8b8db8c2",
            "subnet_id": "subnet-009f55ab1223568f1"
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.custom",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.NAT-Gateway-RT",
            "aws_route_table.ap-south-1a-public",
            "aws_route_table_association.ap-south-1a-public",
            "aws_subnet.ap-south-1a-public",
            "aws_subnet.ap-south-1b-private",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ap-south-1a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd2c11284496c32b",
            "route_table_id": "rtb-0db560cc2b01a2a08",
            "subnet_id": "subnet-00d3e2f52730d7186"
          },
          "dependencies": [
            "aws_internet_gateway.custom",
            "aws_route_table.ap-south-1a-public",
            "aws_subnet.ap-south-1a-public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237389711669:security-group/sg-04422d64d70273c76",
            "description": "Allow incoming database connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04422d64d70273c76",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017116e906a0b4804"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "vpc_db",
            "name_prefix": "",
            "owner_id": "237389711669",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DBServerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5d9596a2ba9d8a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237389711669:security-group/sg-017116e906a0b4804",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017116e906a0b4804",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_web",
            "name_prefix": "",
            "owner_id": "237389711669",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5d9596a2ba9d8a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ap-south-1a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237389711669:subnet/subnet-00d3e2f52730d7186",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00d3e2f52730d7186",
            "map_public_ip_on_launch": false,
            "owner_id": "237389711669",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0f5d9596a2ba9d8a0"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ap-south-1b-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237389711669:subnet/subnet-009f55ab1223568f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-009f55ab1223568f1",
            "map_public_ip_on_launch": false,
            "owner_id": "237389711669",
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-0f5d9596a2ba9d8a0"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237389711669:vpc/vpc-0f5d9596a2ba9d8a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0410e942faed6bd00",
            "default_route_table_id": "rtb-0294e9a3aa9b07936",
            "default_security_group_id": "sg-01417b8a23539c145",
            "dhcp_options_id": "dopt-f2b17a99",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f5d9596a2ba9d8a0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0294e9a3aa9b07936",
            "owner_id": "237389711669",
            "tags": {
              "Name": "terraform-aws-vpc"
            }
          }
        }
      ]
    }
  ]
}